[gd_scene load_steps=8 format=3 uid="uid://cvxo4w6ov724i"]

[ext_resource type="Script" uid="uid://ca7ll4bopkqpv" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Script" uid="uid://t5xg36eqq4n0" path="res://Player/PlayerStates/PlayerFSM.gd" id="2_4ntmi"]
[ext_resource type="Script" uid="uid://bf5cw8x5fe2vb" path="res://Player/PlayerStates/GroundedState.gd" id="3_btcbx"]
[ext_resource type="Script" uid="uid://bsae5ihuv3a3v" path="res://Player/PlayerStates/AirState.gd" id="4_gwnis"]
[ext_resource type="Script" uid="uid://da2ohmmfmsfw0" path="res://Player/PlayerStates/SlideState.gd" id="5_k53q1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3v3li"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k53q1"]
height = 1.0

[node name="CharacterBody2D" type="CharacterBody3D"]
script = ExtResource("1_l8h54")

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource("2_4ntmi")
metadata/_custom_type_script = "uid://t5xg36eqq4n0"

[node name="Ground" type="Node" parent="PlayerFSM"]
script = ExtResource("3_btcbx")
metadata/_custom_type_script = "uid://bf5cw8x5fe2vb"

[node name="Air" type="Node" parent="PlayerFSM"]
script = ExtResource("4_gwnis")
metadata/_custom_type_script = "uid://bsae5ihuv3a3v"

[node name="Slide" type="Node" parent="PlayerFSM"]
script = ExtResource("5_k53q1")
metadata/_custom_type_script = "uid://da2ohmmfmsfw0"

[node name="regularCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3v3li")

[node name="crouchCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_k53q1")

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="camera" type="Camera3D" parent="neck"]
